# daq

./: .gitignore  README.md
online/: .LOGGER_HISTORY_EVENTS.TXT  .ODB.SHM  .SHM_HOST.TXT  README.md  exptab  kill_daq  last.json  start_daq.sh
online/custom/: calibration.html  cryo_switch.html  local_oscill.html
online/driver/Spectrum_NetBox/: CMakeLists.txt  regs.h  spcm_network_winLin.cpp  spcm_network_winLin.h  spcm_ostools.h  spcm_ostools_linux.cpp  spcm_ostools_qnx.cpp  spcm_ostools_win.cpp  spcm_oswrap.h
online/driver/sc_csv_driver/: CMakeLists.txt  config_csv.conf  csvdev.cxx  csvdev.h
online/source/: CryoSwitch.py  README.md  RUCIO.md  Untitled.ipynb  data2rucio_recheck.py  get_storage_token.py  midas2rucio.py  provaNETBOX.py  rucio_cleanup.py  sc_frontend.py  scfe.cxx  simulate_signal.py  testSpectrum.py  testingItems.ipynb  timestampGPS.py
online/source/Calibration/: Calibration.py
online/source/Cryoswitch/: CryoSwitch.py  CryoSwitch_C-2.py
online/source/Examples/: Calibration.py  producer_lnf.py  producer_sin.py
online/source/GPS/: timestampGPS.py
online/source/LO/: LocalOscill.py
online/source/Monitor/: display_IQ.py  display_Netbox_raw.py
online/source/fe/: CMakeLists.txt  Cold_fe.cxx  cold_fe.cxx
online/source/sc/: CMakeLists.txt  sc_fe.cxx
online/source/tests_and_tries/: basic_frontend.py  bufferTest.ipynb  netbox.py  testingItems.ipynb
online/source/tool/: Read_banks_names.py  gettoken.sh  rucio_disk_tape_upload.py
online/userfiles/sequencer/: daqCalib.msl  loop.msl  test.msl
